2006-04-19  Lars Clausen  <lars@raeder.dk>

	* installer/win32/dia.nsi: 
	* doc/en/dia.xml: 
	* doc/eu/dia.xml: 
	* doc/pl/dia.xml: 
	* config.h.win32: 
	* configure.in: 
	* NEWS: Release 0.95

	* shapes/Gane_and_Sarson/process.shape: Connectionpoint update
	from Nick Moore <shiny.nickel@gmail.com>.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-12  Lars Clausen  <lars@raeder.dk>

	* installer/win32/dia.nsi: 
	* doc/en/dia.xml: 
	* doc/eu/dia.xml: 
	* doc/pl/dia.xml: 
	* config.h.win32: 
	* configure.in: 
	* NEWS: -pre9

	* configure.in: Check for xgettext.  Apparently
	AM_GLIB_GNU_GETTEXT notices it's missing but doesn't abort.

2006-04-04  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi:
	* installer/win32/langmacros.nsh:
	* installer/win32/locale/*.nsh: Added check for outdated libgtk dll;
	closes bug #335477

2006-04-03  Lars Clausen  <lars@raeder.dk>

	* installer/win32/dia.nsi: 
	* doc/en/dia.xml: 
	* doc/eu/dia.xml: 
	* doc/pl/dia.xml: 
	* config.h.win32: 
	* configure.in: 
	* NEWS: -pre8

	* plug-ins/xfig/xfig-import.c: Initially place text in the right
	place. 

2006-04-03  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi:
	* installer/win32/locale/french.nsh: Added french installer
	locale. Patch from Yannick Le Ny <y.le.ny@ifrance.com>

2006-04-02  Hans Breuer  <hans@breuer.org>

	* doc/pl/dia.xml : "DOCTYPE book" closes bug #142098, Roland Stigge

2006-03-29  Daniel Drake  <dsd@gentoo.org>

	* configure.in: Use standard pkg-config expressions to check for
	GTK+/Glib, the GTK-supplied macro's conflict with our usage of
	$GTK_MODULES (#335422)

2006-03-28  Lars Clausen  <lars@raeder.dk>

	* app/Makefile.am (dia_LDADD): Patch from Peter for bug #336377:
	Include libs and cflags in proper places.

	* installer/win32/dia.nsi: 
	* doc/en/dia.xml: 
	* doc/eu/dia.xml: 
	* doc/pl/dia.xml: 
	* config.h.win32: 
	* configure.in: 